--- a/Themes/ExpanseListViewStyle.xaml
+++ b/Themes/ExpanseListViewStyle.xaml
@@ -3,7 +3,10 @@
     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
     
     <ControlTemplate x:Key="ExpanseListViewTemplate" TargetType="{x:Type ListBox}">
-        <Border x:Name="Bd" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="1" SnapsToDevicePixels="true">
+        <Border x:Name="Bd" Background="{TemplateBinding Background}" 
+                BorderBrush="{TemplateBinding BorderBrush}" 
+                BorderThickness="{TemplateBinding BorderThickness}" 
+                Padding="1" SnapsToDevicePixels="true">
             <ScrollViewer Focusable="false" Padding="{TemplateBinding Padding}">
                 <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
             </ScrollViewer>
