replace scope factory with some kind of mapping between ICharacterCreationViewModels, so the VMs will pass the data to the same instance of the service

--- a/Core/MVVM/View/CharacterCreationWindow.xaml
+++ b/Core/MVVM/View/CharacterCreationWindow.xaml
@@ -56,6 +56,7 @@
                                  Style="{DynamicResource ExpanseToggleButton}" 
                                  Content="Origin" Command="{Binding NavigateToOriginSelect}"
                                  VerticalContentAlignment="Center"
+                                 IsChecked="True"
                                  BorderThickness="0"/>
                 </custom:CutCorner>
                 <custom:CutCorner BorderCuts="1,0,0,0" Grid.Column="1" Margin="10">
