--- a/MVVM/View/CharacterCreationWindow.xaml
+++ b/MVVM/View/CharacterCreationWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:TheExpanseRPG.MVVM.View"
         xmlns:custom="clr-namespace:TheExpanseRPG.CustomControls"
         xmlns:vm="clr-namespace:TheExpanseRPG.MVVM.ViewModel" 
+        xmlns:conv="clr-namespace:TheExpanseRPG.Converters" 
         xmlns:usercontrols="clr-namespace:TheExpanseRPG.UserControls" 
         d:DataContext="{d:DesignInstance Type=vm:CharacterCreationViewModel}"
         mc:Ignorable="d"
@@ -13,9 +14,17 @@
         MouseDown="Window_MouseDown"
         Style="{StaticResource ExpanseWindowStyle}"
         Topmost="False"
-        
+        Closing="Window_Closing"
         Title="CharacterCreationWindow" Height="710" Width="1200">
 
+    <Window.Resources>
+        <conv:SocialAndBackgroundToButtonContentConverter x:Key="SocialAndBackgroundToButtonContentConverter"/>
+        <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <conv:ConflictItemToTooltipContentConverter x:Key="ConflictItemToTooltipContentConverter"/>
+
+
+        
+    </Window.Resources>
     <Border BorderBrush="{StaticResource EXPDarkBlueBrush}" BorderThickness="3">
         <Grid>
             <Grid.Resources>
@@ -37,7 +46,7 @@
             </Grid.Resources>
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition />
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
@@ -53,44 +62,162 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <custom:CutCorner BorderCuts="1,0,0,1" Grid.Column="0" Margin="10">
-                    <RadioButton HorizontalContentAlignment="Center" GroupName="creationSteps" 
+
+                <StackPanel>
+
+                    <TextBlock HorizontalAlignment="Center" Foreground="{StaticResource EXPLightBlueBrush}" FontStyle="Italic" Text="{Binding SelectedOrigin, Mode=OneWay}" Margin="0,1"/>
+
+                    <custom:CutCorner BorderCuts="1,0,0,1" Margin="5,1" RenderOptions.EdgeMode="Aliased">
+                        <RadioButton GroupName="creationSteps" 
+                            Style="{DynamicResource ExpanseToggleButton}" 
+                            Command="{Binding NavigateToOriginSelect}"
+                            HorizontalContentAlignment="Stretch"
+                            IsChecked="True"
+                            BorderThickness="0">
+                            <Grid Margin="2">
+                                <TextBlock Text="Origin" HorizontalAlignment="Center"
+                                    Foreground="{Binding Path=(TextElement.Foreground), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"
+                                    FontWeight="{Binding Path=(TextElement.FontWeight), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"/>
+                                <Image Visibility="{Binding HasOriginSelectionConflict, Converter={StaticResource BoolToVisibilityConverter}}" 
+                                       Source="\Images\pngwing.png" Width="18" Height="18" HorizontalAlignment="Right" Margin="0,0,5,0"
+                                       ToolTipService.InitialShowDelay="0"
+                                       ToolTipService.Placement="Top"
+                                       ToolTipService.HorizontalOffset="-165"
+                                       ToolTipService.VerticalOffset="-20"
+                                       RenderOptions.BitmapScalingMode="Fant">
+                                    
+                                    <Image.ToolTip>
+                                        <ToolTip Content="{Binding OriginConflicts, Converter={StaticResource ConflictItemToTooltipContentConverter}}"
+                                                 Background="#D7D42A" Foreground="Black"/>
+                                    </Image.ToolTip>
+                                </Image>
+                            </Grid>
+                        </RadioButton>
+                    </custom:CutCorner>
+                </StackPanel>
+                <StackPanel Grid.Column="1">
+                    <TextBlock HorizontalAlignment="Center" Foreground="{StaticResource EXPLightBlueBrush}" FontStyle="Italic" Margin="0,1">
+                        <TextBlock.Text>
+                            <MultiBinding Converter="{StaticResource SocialAndBackgroundToButtonContentConverter}">
+                                <Binding Path="SelectedSocialClass" />
+                                <Binding Path="SelectedBackground.BackgroundName" />
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
+                    <custom:CutCorner BorderCuts="0,1,0,0" Margin="5,1" RenderOptions.EdgeMode="Aliased">
+                        <RadioButton BorderThickness="0" HorizontalContentAlignment="Stretch" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Command="{Binding NavigateToSocialAndBackground}">
+                            <Grid Margin="2">
+                                <TextBlock Text="Social Class, Background" HorizontalAlignment="Center"
+                                    Foreground="{Binding Path=(TextElement.Foreground), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"
+                                    FontWeight="{Binding Path=(TextElement.FontWeight), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"/>
+                                <Image Visibility="{Binding HasSocialOrBackgroundSelectionConflict, Converter={StaticResource BoolToVisibilityConverter}}" 
+                                       Source="\Images\pngwing.png" Width="18" Height="18" HorizontalAlignment="Right" Margin="0,0,5,0"
+                                       ToolTipService.InitialShowDelay="0"
+                                       ToolTipService.Placement="Top"
+                                       ToolTipService.HorizontalOffset="-165"
+                                       ToolTipService.VerticalOffset="-20"
+                                       RenderOptions.BitmapScalingMode="HighQuality">
+                                    <Image.ToolTip>
+                                        <ToolTip Content="{Binding SocialOrBackgroundConflicts, Converter={StaticResource ConflictItemToTooltipContentConverter}}"
+                                            Background="#D7D42A" Foreground="Black"/>
+                                    </Image.ToolTip>
+                                </Image>
+
+
+                            </Grid>
+                        </RadioButton>
+                    </custom:CutCorner>
+                </StackPanel>
+                <StackPanel Grid.Column="2">
+                    <TextBlock HorizontalAlignment="Center" Foreground="{StaticResource EXPLightBlueBrush}" FontStyle="Italic" Text="{Binding SelectedProfession.ProfessionName}" Margin="0,1"/>
+                    <custom:CutCorner BorderCuts="0,0,1,0" Margin="5,1" RenderOptions.EdgeMode="Aliased">
+                        <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" 
+                                     Command="{Binding NavigateToCharacterProfessions}">
+                            <Grid Margin="2">
+                                <TextBlock Text="Profession" HorizontalAlignment="Center"
+                                    Foreground="{Binding Path=(TextElement.Foreground), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"
+                                    FontWeight="{Binding Path=(TextElement.FontWeight), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"/>
+                                <Image Visibility="{Binding HasProfessionSelectionConflict, Converter={StaticResource BoolToVisibilityConverter}}" 
+                                       ToolTipService.InitialShowDelay="0"
+                                       ToolTipService.Placement="Top"
+                                       Source="\Images\pngwing.png" Width="18" Height="18" HorizontalAlignment="Right" Margin="0,0,5,0"
+                                       ToolTipService.HorizontalOffset="-165"
+                                       ToolTipService.VerticalOffset="-20"
+                                       RenderOptions.BitmapScalingMode="HighQuality">
+                                    <Image.ToolTip>
+                                        <ToolTip Content="{Binding ProfessionConflicts, Converter={StaticResource ConflictItemToTooltipContentConverter}}" 
+                                                  Background="#D7D42A" Foreground="Black"/>
+                                    </Image.ToolTip>
+                                </Image>
+
+                            </Grid>
+                        </RadioButton>
+                    </custom:CutCorner>
+                </StackPanel>
+                <StackPanel Grid.Column="3">
+                    <TextBlock HorizontalAlignment="Center" Foreground="{StaticResource EXPLightBlueBrush}" FontStyle="Italic" Text="{Binding SelectedDrive.DriveName}" Margin="0,1"/>
+
+                    <custom:CutCorner BorderCuts="0,0,0,1" Margin="5,1" RenderOptions.EdgeMode="Aliased">
+                        <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Command="{Binding NavigateToDrives}" >
+                            <Grid Margin="2">
+                                <TextBlock Text="Drive" HorizontalAlignment="Center" 
+                                    Foreground="{Binding Path=(TextElement.Foreground), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"
+                                    FontWeight="{Binding Path=(TextElement.FontWeight), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"/>
+                                <Image ToolTip="tooltip" Height="18" HorizontalAlignment="Right" Margin="0,0,5,0"/>
+                            </Grid>
+                        </RadioButton>
+                    </custom:CutCorner>
+
+                </StackPanel>
+                <StackPanel Grid.Column="4">
+                    <TextBlock HorizontalAlignment="Center" Foreground="{StaticResource EXPLightBlueBrush}" FontStyle="Italic" Margin="0,1"/>
+                    <custom:CutCorner BorderCuts="1,0,0,0" Margin="5,1" RenderOptions.EdgeMode="Aliased">
+
+                        <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" 
+                                 GroupName="creationSteps" 
                                  Style="{DynamicResource ExpanseToggleButton}" 
-                                 Content="Origin" Command="{Binding NavigateToOriginSelect}"
-                                 VerticalContentAlignment="Center"
-                                 IsChecked="True"
-                                 BorderThickness="0"/>
-                </custom:CutCorner>
-                <custom:CutCorner BorderCuts="0,1,0,0" Grid.Column="1" Margin="10">
-                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Social Class and Background" Command="{Binding NavigateToSocialAndBackground}"  />
-                </custom:CutCorner>
-                <custom:CutCorner BorderCuts="0,0,1,0" Grid.Column="2" Margin="10">
-                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Professions" Command="{Binding NavigateToCharacterProfessions}" />
-                </custom:CutCorner>
-                <custom:CutCorner BorderCuts="0,0,0,1" Grid.Column="3" Margin="10">
-                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Drives" Command="{Binding NavigateToDrives}" />
-                </custom:CutCorner>
-                <custom:CutCorner BorderCuts="1,0,0,0" Grid.Column="4" Margin="10">
-                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Abilities" Command="{Binding NavigateToAttributeRoll}"  />
-                </custom:CutCorner>
-                <custom:CutCorner BorderCuts="0,1,1,0"  Grid.Column="5" Margin="10">
-                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Save, and back to main" />
-                </custom:CutCorner>
+                                 Command="{Binding NavigateToAttributeRoll}"  
+                                    >
+                            <Grid Margin="2">
+                                <TextBlock Text="Abilities" HorizontalAlignment="Center" 
+                                    Foreground="{Binding Path=(TextElement.Foreground), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"
+                                    FontWeight="{Binding Path=(TextElement.FontWeight), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"/>
+                                <Image ToolTip="tooltip" Width="18" Height="18" HorizontalAlignment="Right" Margin="0,0,5,0"/>
+                            </Grid>
+                        </RadioButton>
+                    </custom:CutCorner>
+                </StackPanel>
+                <StackPanel Grid.Column="5">
+                    <TextBlock HorizontalAlignment="Center" Foreground="{StaticResource EXPLightBlueBrush}" FontStyle="Italic" Margin="0,1"/>
+                    <custom:CutCorner BorderCuts="0,1,1,0" Margin="5,1" RenderOptions.EdgeMode="Aliased">
+                        <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" 
+                                 GroupName="creationSteps" 
+                                 Style="{DynamicResource ExpanseToggleButton}" >
+                            <Grid Margin="2">
+                                <TextBlock Text="Finalize" HorizontalAlignment="Center" 
+                                     Foreground="{Binding Path=(TextElement.Foreground), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"
+                                     FontWeight="{Binding Path=(TextElement.FontWeight), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"/>
+                                <Image ToolTip="tooltip" Width="18" Height="18" HorizontalAlignment="Right" Margin="0,0,5,0"/>
+                            </Grid>
+                        </RadioButton>
+                    </custom:CutCorner>
+                </StackPanel>
+
             </Grid>
-            
+
             <Grid VerticalAlignment="Center" Grid.Row="3">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="0" Margin="5">
+                <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="0" Margin="5" HasShadow="0" RenderOptions.EdgeMode="Aliased">
                     <Button Content="Focuses"/>
                 </custom:CutCorner>
-                <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="1" Margin="5">
+                <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="1" Margin="5" HasShadow="0" RenderOptions.EdgeMode="Aliased">
                     <Button Content="Talents" Command="{Binding ShowTalentListCommand}"/>
                 </custom:CutCorner>
-                <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="2" Margin="5">
+                <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="2" Margin="5" HasShadow="0" RenderOptions.EdgeMode="Aliased">
                     <Button Content="Back to main" 
                             Command="{Binding NavigateBackToMain}"
                             CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}"
@@ -99,7 +226,7 @@
             </Grid>
 
 
-            <ContentControl Content="{Binding CurrentInnerViewModel}" Grid.Row="2" Margin="5">
+            <ContentControl Content="{Binding CurrentInnerViewModel}" Grid.Row="2">
 
             </ContentControl>
         </Grid>
